fixed background change flickering on theme-switcher

--- a/app/css/themes/app-theme-2.css
+++ b/app/css/themes/app-theme-2.css
@@ -4,7 +4,7 @@
 /* ============================================================================
 	# Utilities - Colors
 ============================================================================= */
-html {
+body {
   background-color: #1565C0;
 }
 
